--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,7 @@ ENV/
 env.bak/
 venv.bak/
 SAFE_env/
+Vale/
 
 # Spyder project settings
 .spyderproject
@@ -129,4 +130,4 @@ dmypy.json
 Interactive_Notebooks_for_SAFE.docx
 
 # Other
-Vale.*
+Vale/
