--- a/.gitignore
+++ b/.gitignore
@@ -106,7 +106,6 @@ ENV/
 env.bak/
 venv.bak/
 SAFE_env/
-Vale/
 
 # Spyder project settings
 .spyderproject
@@ -130,4 +129,4 @@ dmypy.json
 Interactive_Notebooks_for_SAFE.docx
 
 # Other
-Vale/
+Template/
